# sakimori

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  PLAN.md  README.md  action.yml  deny.toml  osv-scanner.toml  top.json
.cargo/: config.toml
.github/: sakimori.yml
.github/actions/proxy/: action.yml
.github/workflows/: ci.yml  consumer-smoke.yml  docker.yml  homebrew-formula.yml  macos-smoke.yml  osv-mirror.yml  release.yml  security.yml  typosquat-data.yml  windows-smoke.yml
HomebrewFormula/: sakimori.rb
comment/: action.yml
crates/coronarium-core/src/: actions.rs  events.rs  lib.rs  matcher.rs  policy.rs  report.rs  suggest.rs
crates/coronarium-win/src/: win.rs
crates/coronarium/src/: cli.rs  enforcer.rs  loader.rs  resolve.rs
crates/sakimori/: Cargo.toml
crates/sakimori-common/: Cargo.toml
crates/sakimori-common/src/: lib.rs
crates/sakimori-core/: Cargo.toml
crates/sakimori-core/iocs/: coronarium-iocs.yml
crates/sakimori-core/src/: actions.rs  advisories.rs  attribution.rs  cloud_secrets.rs  codeowners.rs  events.rs  html.rs  installs.rs  iocs.rs  lib.rs  policy.rs  presets.rs  report.rs  stats.rs  suggest.rs  tamper.rs
crates/sakimori-ebpf/: Cargo.toml
crates/sakimori-ebpf/src/: main.rs
crates/sakimori-hub/: Cargo.toml  Dockerfile
crates/sakimori-hub/cloudflare/: package.json  worker.js  wrangler.toml
crates/sakimori-hub/src/: advisories.rs  classify.rs  dispatch.rs  lib.rs  main.rs  server.rs  store.rs
crates/sakimori-hub/src/auth/: actions.rs  github.rs  mod.rs  session.rs
crates/sakimori-proxy/: Cargo.toml  README.md
crates/sakimori-proxy/fuzz/: Cargo.toml  README.md
crates/sakimori-proxy/fuzz/fuzz_targets/: host_matcher_parse.rs  inspect_npm_tarball.rs  inspect_pypi_sdist.rs  rewrite_npm_packument.rs  rewrite_nuget_registration.rs  rewrite_pypi_json_api.rs  rewrite_pypi_simple_html.rs  strip_npm_tarball.rs
crates/sakimori-proxy/src/: ca.rs  daemon.rs  decision.rs  host_allow.rs  install.rs  lib.rs  lifecycle.rs  nuget_flatcontainer_client.rs  osv.rs  osv_mirror.rs  otlp.rs  parser.rs  proxy.rs  pypi_simple_client.rs  registries.rs  rewrite.rs  rewrite_npm.rs  rewrite_nuget.rs  rewrite_pypi.rs  sigstore_verify.rs  strip_cache.rs  typosquat.rs
crates/sakimori-proxy/tests/: custom_registries_e2e.rs
crates/sakimori-win/: Cargo.toml
crates/sakimori-win/src/: firewall.rs  main.rs  win.rs
crates/sakimori/src/: cgroup.rs  cli.rs  daemon.rs  doctor.rs  enforcer.rs  events.rs  install_gate.rs  kprobe_override.rs  loader.rs  main.rs  policy.rs  resolve.rs  resolve_hostnames.rs  resolve_refresh.rs
examples/: sakimori.yml
job/: action.yml  main.js  post.js  pre.js
job/stop/: action.yml
packaging/git-hooks/: pre-commit
packaging/macos/: README.md  dev.sakimori.watch.plist
proxy/: action.yml  main.js  post.js
scripts/: build-osv-mirror.py  build-typosquat-data.py  update-homebrew-formula.py
tests/fixtures/: package-lock.json
verify-cache/: action.yml  main.js
