[workspace]
members = [
    "crates/sakimori",
    "crates/sakimori-common",
    "crates/sakimori-core",
    "crates/sakimori-hub",
    "crates/sakimori-proxy",
]
# NOTE: crates/sakimori-ebpf is built separately with a bpf target via xtask.
# crates/sakimori-win is Windows-only; has its own workspace.
exclude = ["crates/sakimori-ebpf", "crates/sakimori-win"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bokuweb/sakimori"

[workspace.dependencies]
aya = "0.13"
aya-log = "0.2"
aya-ebpf = "0.1"
aya-log-ebpf = "0.1"
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "io-util", "process", "time"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
bytemuck = { version = "1", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
ipnet = { version = "2", features = ["serde"] }
ureq = { version = "2", default-features = false, features = ["tls", "json"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "std", "clock"] }
toml = "0.8"
notify = "6"
hickory-resolver = "0.24"
uuid = { version = "1", features = ["v4"] }
nix = { version = "0.29", features = ["sched", "process", "user", "fs"] }
bytes = "1"
futures = "0.3"
