[package]
name = "sakimori-common"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["user"]
# `user` pulls in bytemuck / serde. `ebpf` keeps the crate no_std.
user = ["dep:bytemuck", "dep:serde"]
ebpf = []

[dependencies]
bytemuck = { workspace = true, optional = true }
serde = { workspace = true, optional = true }

# `aya` only compiles on Linux. We depend on it unconditionally when on
# Linux so we can impl its `Pod` marker for our shared types (orphan rule).
[target.'cfg(target_os = "linux")'.dependencies]
aya = { workspace = true }
