[package]
name = "sakimori-core"
version.workspace = true
edition.workspace = true
license.workspace = true

# Pure-Rust, platform-neutral: everything sakimori (Linux) and
# sakimori-win share — Event / Stats schema, Policy parsing, file &
# exec matchers, JSON / HTML / summary writers.

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
bytemuck = { workspace = true }
log = { workspace = true }
ureq = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
notify = { workspace = true }
sha2 = "0.10"
sakimori-common = { path = "../sakimori-common", features = ["user"] }
