[package]
name = "sakimori-hub"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Optional self-hostable companion service: install inventory + retroactive advisory JOIN for sakimori-proxy."

[lib]
name = "sakimori_hub"
path = "src/lib.rs"

[[bin]]
name = "sakimori-hub"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "net"] }
axum = { version = "0.7", default-features = false, features = ["http1", "json", "query", "tokio", "form"] }
tower = "0.5"
rusqlite = { version = "0.32", features = ["bundled"] }
ureq = { workspace = true }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
semver = "1"
subtle = "2"
rand = "0.8"
base64 = "0.22"
urlencoding = "2"
jsonwebtoken = "9"

sakimori-core = { path = "../sakimori-core" }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util"] }
